# Class_Project

./: .gitignore  ML_notebook.ipynb  old_notebook.ipynb  pyproject.toml  shortened_notebook.ipynb
docs/source/: conf.py  index.rst
src/: ML_mod.py  mod.py
tests/: test_ML_mod.py  test_mod.py
